clear state on send

--- a/public/index.html
+++ b/public/index.html
@@ -23,9 +23,13 @@
   <div id="app">
     <h1>🎈 Welcome to PartyKit!</h1>
   </div>
+
+  <button id="clear">Clear logs</button>
+
   <form>
-    <input type="text" name="message" id="message">
+    <input type="text" name="message" id="message" placeholder="enter msg to send">
   </form>
+
 
   <button id="sendBtn">Send</button>
   <script type="module" src="/dist/client.js"></script>
